# EternityII_Solver

./: .gitignore  EternityII_Solver.sln  README.md
EternityII_Solver/: EternityII_Solver.csproj  Program.cs  Structs.cs  Util.cs
kotlin/: settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/eternityii/: App.kt  BoardOrder.kt  Breaks.kt  Display.kt  DynamicPieceData.kt  Heuristics.kt  Piece.kt  Pieces.kt  ProgressTracker.kt  RotatedPiece.kt  RotatedPieceWithLeftBottom.kt  RotatedPieces.kt  SearchIndex.kt  Solver.kt  SolverResult.kt  SolverStarter.kt  Store.kt
kotlin/config/detekt/: detekt-config.yml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: board_order.rs  main.rs  pieces.rs  structs.rs  utils.rs
