[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
md5 = "0.7.0"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.8.1"
string-builder = "0.2.0"
thousands = "0.2.0"
unreachable = "1.0.0"
uuid = { version = "1.7.0", features = ["v4"] }
itertools = "0.12.0"

# Possible performance optimisations. Based on https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
